[package]
name = "fibonacci-rust-api"
version = "1.0.0"
edition = "2021"
authors = ["Your Name tissongguyghislain001@gmail.com"]
description = "High-performance Fibonacci API built with Rust and deployed on Vercel"
license = "MIT"
keywords = ["fibonacci", "serverless", "vercel", "rust", "api"]

[dependencies]
tokio = { version = "1.45", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = "1.1"
num-bigint = "0.4"
num-traits = "0.2"
chrono = { version = "0.4.41", features = ["serde"] }

[[bin]]
name = "fibonacci"
path = "api/fibonacci.rs"
